# nanoBragg

./: .gitignore  .gitmodules  A.mat  AT012_TRACE_ANALYSIS.md  CLAUDE.md  COMMIT_MESSAGE.md  CONTRIBUTING.md  DEBUGGING_NIGHTMARE_PREVENTION_TOOLKIT.md  FINAL_DIAGNOSIS_REPORT.md  HYPOTHESIS_TESTING_RESULTS.md  HYPOTHESIS_TEST_RESULTS.md  Makefile  P1.hkl  PARALLEL_TEST_COMMANDS.md  PARALLEL_VALIDATION_ACCEPTANCE_TESTS.md  PERFORMANCE_ANALYSIS.md  PHASE_4_1_DIAGNOSTIC_REPORT.md  PHASE_5_FINAL_VALIDATION_REPORT.md  PHASE_5_IMPLEMENTATION_SUMMARY.md  PHASE_6_FINAL_REPORT.md  PIX0_VECTOR_28MM_OFFSET_ROOT_CAUSE_ANALYSIS.md  PLAN_first_win.md  PROJECT_STATUS.md  README.md  README_PYTORCH.md  SESSION_WORK_SUMMARY.md  SPEC_PROMPT.md  TILTED_DETECTOR_ROOT_CAUSE_ANALYSIS.md  TRICLINIC_INVESTIGATION_REPORT.md  add_c_instrumentation.py  analyze_differences.py  analyze_performance.py  arch.md  beam_pivot_section.txt  benchmark_detailed.json  benchmark_detailed.py  benchmark_results.json  benchmark_speed.py  c_detector_info.txt  c_full_trace.txt  (+167 more)
archive/: fix_plan_archive.md  targeted_hypothesis_test.py
comparison_N1/: c_stdout.txt  py_stdout.txt  summary.json
comparison_N10/: c_stdout.txt  py_stdout.txt  summary.json
comparison_artifacts/: c_stdout.txt  py_stdout.txt  summary.json
comparison_lambda_1.0/: c_stdout.txt  py_stdout.txt  summary.json
comparison_lambda_1.0_rotations/: c_stdout.txt  py_stdout.txt  summary.json
comparison_lambda_6.2/: c_stdout.txt  py_stdout.txt  summary.json
comparison_rotations/: c_stdout.txt  py_stdout.txt  summary.json
comparison_test/: c_stdout.txt  py_stdout.txt  summary.json
comparison_test2/: c_stdout.txt  py_stdout.txt  summary.json
comparison_triclinic/: c_stdout.txt  py_stdout.txt  summary.json
correlation_analysis/: correlation_analysis.json
cuda/: nanoBragg.d  nanoBraggCPU.d  nanoBraggCUDA.d  subdir.mk
demo_outputs/: demo_summary.txt
devdocs/: README.md  differentiability.md
diagnosis_summary/: action_plan.md
distance_scaling_analysis/: distance_scaling_results.json
docs/: CLAUDE.md  PROJECT_STATUS.md  README.md  (+12 more)
(+3730 files in other folders)
